--- a/Ura_Porezna/Ura_Porezna.csproj
+++ b/Ura_Porezna/Ura_Porezna.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="IspPodIzBazeUra.cs" />
     <Compile Include="Poruka.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,6 +95,12 @@
       <DependentUpon>Poruka.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="upisCsvURA-Baza.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="URA-Odobrenja.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <EmbeddedResource Include="Form0.resx">
       <DependentUpon>Form0.cs</DependentUpon>
     </EmbeddedResource>
