--- a/Ura_Porezna/Ura_Porezna.csproj
+++ b/Ura_Porezna/Ura_Porezna.csproj
@@ -81,11 +81,11 @@
     <Compile Include="FormURA.Designer.cs">
       <DependentUpon>FormURA.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="FormIRA.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="FormIRA.Designer.cs">
+      <DependentUpon>FormIRA.cs</DependentUpon>
     </Compile>
     <Compile Include="IspPodIzBazeUra.cs" />
     <Compile Include="Poruka.cs">
@@ -107,8 +107,8 @@
     <EmbeddedResource Include="FormURA.resx">
       <DependentUpon>FormURA.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <EmbeddedResource Include="FormIRA.resx">
+      <DependentUpon>FormIRA.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Poruka.resx">
       <DependentUpon>Poruka.cs</DependentUpon>
