--- a/Ura_Porezna/packages.config
+++ b/Ura_Porezna/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.3.1" targetFramework="net461" />
-  <package id="ExcelDataReader" version="3.4.2" targetFramework="net461" />
+  <package id="ExcelDataReader" version="3.6.0" targetFramework="net461" />
+  <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net461" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net461" />
   <package id="MySql.Data" version="8.0.18" targetFramework="net461" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net461" />
