Use delegates for date change

--- a/Ura_Porezna/Ura_Porezna.csproj
+++ b/Ura_Porezna/Ura_Porezna.csproj
@@ -104,6 +104,8 @@
       <DependentUpon>Hzzo.cs</DependentUpon>
     </Compile>
     <Compile Include="HZZO\ucitajXls.cs" />
+    <Compile Include="IRA\Filter.cs" />
+    <Compile Include="IRA\Ispis.cs" />
     <Compile Include="URA\CustomDataGridView.cs">
       <SubType>Component</SubType>
     </Compile>
