clean extra code

--- a/Ura_Porezna/App.config
+++ b/Ura_Porezna/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Ura_Porezna.Properties.Settings.UraConnection" connectionString="Dsn=MySQL-URA;uid=root;pwd=pass123"
+            providerName="System.Data.Odbc" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
