--- a/Ura_Porezna/App.config
+++ b/Ura_Porezna/App.config
@@ -1,12 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Ura_Porezna.Properties.Settings.UraConnection" connectionString="Dsn=MySQL-URA;uid=root;pwd=pass123"
-            providerName="System.Data.Odbc" />
+        <add name="Ura_Porezna.Properties.Settings.UraConnection" connectionString="Dsn=MySQL-URA;uid=root;pwd=pass123" providerName="System.Data.Odbc" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.18.0" newVersion="8.0.18.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
