--- a/Ura_Porezna/packages.config
+++ b/Ura_Porezna/packages.config
@@ -5,5 +5,6 @@
   <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net461" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net461" />
   <package id="MySql.Data" version="8.0.18" targetFramework="net461" />
+  <package id="MySqlBackup.NET" version="2.3.1" targetFramework="net461" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net461" />
 </packages>
