--- a/Ura_Porezna/Ura_Porezna.csproj
+++ b/Ura_Porezna/Ura_Porezna.csproj
@@ -150,9 +150,7 @@
     <Compile Include="IRA\FormIRA.Designer.cs">
       <DependentUpon>FormIRA.cs</DependentUpon>
     </Compile>
-    <Compile Include="URA\PopuniXml.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="URA\PopuniXml.cs" />
     <Compile Include="URA\URA-IspPodIzBaze.cs" />
     <Compile Include="Poruka.cs">
       <SubType>Form</SubType>
@@ -168,6 +166,7 @@
     <Compile Include="URA\URA-Odobrenja.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="URA\UraStavka.cs" />
     <EmbeddedResource Include="Form0.resx">
       <DependentUpon>Form0.cs</DependentUpon>
     </EmbeddedResource>
