--- a/Ura_Porezna/Ura_Porezna.csproj
+++ b/Ura_Porezna/Ura_Porezna.csproj
@@ -150,6 +150,7 @@
     <Compile Include="IRA\FormIRA.Designer.cs">
       <DependentUpon>FormIRA.cs</DependentUpon>
     </Compile>
+    <Compile Include="URA\Odobrenja.cs" />
     <Compile Include="URA\PopuniXml.cs" />
     <Compile Include="URA\URA-IspPodIzBaze.cs" />
     <Compile Include="Poruka.cs">
@@ -163,9 +164,6 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="URA\URA-upisCsv-Baza.cs" />
-    <Compile Include="URA\URA-Odobrenja.cs">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="URA\UraStavka.cs" />
     <EmbeddedResource Include="Form0.resx">
       <DependentUpon>Form0.cs</DependentUpon>
