--- a/Ura_Porezna/Ura_Porezna.csproj
+++ b/Ura_Porezna/Ura_Porezna.csproj
@@ -152,6 +152,7 @@
     </Compile>
     <Compile Include="URA\Odobrenja.cs" />
     <Compile Include="URA\PopuniXml.cs" />
+    <Compile Include="URA\Troskovi.cs" />
     <Compile Include="URA\URA-IspPodIzBaze.cs" />
     <Compile Include="Poruka.cs">
       <SubType>Form</SubType>
@@ -160,9 +161,6 @@
       <DependentUpon>Poruka.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
-    <Compile Include="URA\URA-Troskovi.cs">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="URA\URA-upisCsv-Baza.cs" />
     <Compile Include="URA\UraStavka.cs" />
     <EmbeddedResource Include="Form0.resx">
