--- a/Ura_Porezna/App.config
+++ b/Ura_Porezna/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Ura_Porezna.Properties.Settings.UraConnection" connectionString="Dsn=MySQL-URA;uid=root;pwd=pass123" providerName="System.Data.Odbc" />
+        <add name="ConnString" connectionString="Dsn=MySQL-URA;uid=root;pwd=pass123" providerName="System.Data.Odbc" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
